--- a/app/src/main/res/layout/add_module_dialog.xml
+++ b/app/src/main/res/layout/add_module_dialog.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:padding="?dialogPreferredPadding">
 
     <EditText
         android:id="@+id/module_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         android:ems="10"
         android:hint="Module Name (e.g. CS126, ES193)"
         android:inputType="textNoSuggestions"
