Made layouts use string values

--- a/app/src/main/res/layout/add_module_dialog.xml
+++ b/app/src/main/res/layout/add_module_dialog.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:padding="?dialogPreferredPadding">
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Module Name (e.g. CS126, ES193)"
+        android:hint="@string/module_name_suggestion"
         android:inputType="textNoSuggestions"
-        android:singleLine="true" />
+        android:singleLine="true"
+        android:importantForAutofill="no" tools:targetApi="o" />
 </LinearLayout>
