--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/add_module_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="+" />
+                android:text="@string/add_module_button_text" />
         </LinearLayout>
     </ScrollView>
 
@@ -46,10 +46,10 @@
 
         <Button
             android:id="@+id/my_warwick_button"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="My Warwick" />
+            android:text="@string/my_warwick_button" />
     </LinearLayout>
 
     <LinearLayout
@@ -60,7 +60,7 @@
         android:gravity="center_vertical|center_horizontal"
         android:orientation="vertical"
         android:padding="8dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="This app requires the Write External Storage permission to download files."
+            android:text="@string/write_ext_storage_request"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -81,6 +81,6 @@
             android:id="@+id/permission_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Give Permission" />
+            android:text="@string/give_permission" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
