--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_buttons"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:overScrollMode="never">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,10 +33,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/add_module_button_text" />
         </LinearLayout>
-    </ScrollView>
-
-
-
+    </android.support.v4.widget.NestedScrollView>
 
     <LinearLayout
         android:id="@+id/bottom_buttons"
