--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#2962ff</color>
     <color name="colorPrimaryDark">#0039cb</color>
     <color name="colorAccent">#00e5ff</color>
+    <color name="fadedIcon">#aaffffff</color>
 </resources>
