Moved classes around to implement a single module view

--- a/app/src/main/res/layout/module_content.xml
+++ b/app/src/main/res/layout/module_content.xml
@@ -49,7 +49,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:scrollbars="vertical"
+        android:nestedScrollingEnabled="true"
+        android:scrollbars="none"
         app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
