--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,10 @@
         android:id="@+id/modules"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical"
+        android:nestedScrollingEnabled="true"
         android:padding="8dp"
-        android:nestedScrollingEnabled="false"
 
+        android:scrollbars="vertical"
         tools:listitem="@layout/module" />
 
     <LinearLayout
