--- a/app/src/main/res/layout/module_file_item.xml
+++ b/app/src/main/res/layout/module_file_item.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="24dp"
+    android:background="?attr/selectableItemBackground"
+    android:backgroundTintMode="multiply"
+    android:clickable="true"
+    android:focusable="auto"
     android:gravity="center_vertical"
     android:orientation="vertical">
 
