--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/modules"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:nestedScrollingEnabled="true"
-        android:padding="8dp"
 
         android:scrollbars="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_buttons"
+        app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/module" />
 
     <LinearLayout
