--- a/app/src/main/res/layout/module.xml
+++ b/app/src/main/res/layout/module.xml
@@ -4,12 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="240dp"
-    android:layout_marginBottom="8dp"
-    android:padding="8dp">
+    android:padding="8dp"
+    app:cardElevation="4dp"
+    app:cardUseCompatPadding="true">
 
 
-    <include
-        layout="@layout/module_content"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <include
+            layout="@layout/module_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
 </androidx.cardview.widget.CardView>
