--- a/app/src/main/res/layout/module_content.xml
+++ b/app/src/main/res/layout/module_content.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        app:titleTextColor="#fff"
+        android:theme="@style/AppTheme.Toolbar"
         tools:title="CS141" />
 
     <!--<ImageView
