Fixed bug where first item wasn't selectable

--- a/app/src/main/res/layout/module_content.xml
+++ b/app/src/main/res/layout/module_content.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:theme="@style/AppTheme.Toolbar"
+        app:layout_constraintTop_toTopOf="parent"
         tools:title="CS141" />
 
     <!--<ImageView
@@ -33,16 +34,6 @@
         app:layout_constraintTop_toBottomOf="@+id/title" />-->
     <!--android:background="?android:attr/listDivider"-->
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/links"
         android:layout_width="wrap_content"
@@ -53,7 +44,7 @@
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:listitem="@layout/module_link_item" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -70,7 +61,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/links"
-        app:layout_constraintTop_toBottomOf="@+id/divider"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:listitem="@layout/module_file_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
