--- a/app/src/main/res/layout/module_file_item.xml
+++ b/app/src/main/res/layout/module_file_item.xml
@@ -41,6 +41,7 @@
             android:gravity="center_vertical"
             android:lines="1"
             android:singleLine="true"
+            android:visibility="visible"
             tools:text="abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyz" />
     </LinearLayout>
 
