--- a/app/src/main/res/layout/module_link_item.xml
+++ b/app/src/main/res/layout/module_link_item.xml
@@ -4,6 +4,6 @@
     android:id="@+id/button"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:text="Link">
+    tools:text="EXAM PAPERS">
 
 </Button>
