--- a/app/src/main/res/menu/module_context_menu.xml
+++ b/app/src/main/res/menu/module_context_menu.xml
@@ -12,8 +12,12 @@
         android:title="@string/set_description"
         />
     <item
-        android:id="@+id/action_add_link"
-        android:title="@string/add_link"
+        android:id="@+id/action_add_link_browser"
+        android:title="@string/add_link_browser"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_add_link_manual"
+        android:title="@string/add_link_manual"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_delete_module"
